# glinthawk

./: .gitignore  .travis.yml  Cargo.toml  README.md  Vagrantfile  build.sh
ci/: ci.sh
packaging/: build.sh
packaging/glinthawk/DEBIAN/: control
packaging/glinthawk/etc/systemd/system/: glinthawk.service
src/glinthawk_cli/: Cargo.toml
src/glinthawk_cli/src/: cloudwatch.rs  instance_info.rs  main.rs
src/proc_parser/: Cargo.toml
src/proc_parser/src/: cpu_parser.rs  diskinfo.rs  lib.rs  mem_info.rs  netstats.rs
src/proc_watcher/: Cargo.toml
src/proc_watcher/src/: lib.rs  load.rs  memory.rs  network.rs  process.rs  runner.rs
