[package]
name = "glinthawk_cli"
version = "1.1.1"
authors = ["sourcepirate <sathyanarrayanan@yandex.com>"]
edition = "2018"

[dependencies]
proc_watcher = { path = "../proc_watcher" }
rusoto_cloudwatch = "0.37.0"
rusoto_core = "0.37.0"
rusoto_ec2 = "0.37.0"
log = "0.4.6"
reqwest = "0.9.12"
chrono = "0.4.6"
docopt = "1.1.0"
serde = "1.0.90"